--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 .projects {
   display: flex;
   flex-direction: column;
-  gap: 30vh;
+  gap: 26vh;
   padding: 0px 100px;
 }
 
@@ -113,6 +113,7 @@ body {
   width: 300px;
   height: 600px;
   position: relative;
+  z-index: 5;
 }
 
 .phoneScreen {
@@ -150,7 +151,7 @@ body {
   font-size: 20px;
   color: #333333;
   text-align: justify;
-  line-height: 40px;
+  line-height: 36px;
 }
 
 .projectButton {
@@ -187,6 +188,7 @@ body {
   height: 379px;
   flex: 1;
   position: relative;
+  z-index: 5;
 }
 
 .laptopScreen {
